1. Метод .of [#441820]