@@ -1,8 +1,8 @@
 package ru.job4j.collection.set;
 
+import java.util.Set;
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 
@@ -13,29 +13,29 @@ public class NotifyAccountTest {
 
     @Test
     public void sent() {
-        List<Account> accounts = Arrays.asList(
-                new Account("123", "Petr Arsentev", "eDer3432f"),
-                new Account("142", "Petr Arsentev", "000001")
+        List<Account> accounts = List.of(
+            new Account("123", "Petr Arsentev", "eDer3432f"),
+            new Account("142", "Petr Arsentev", "000001")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
-                        new Account("123", "Petr Arsentev", "eDer3432f"),
-                        new Account("142", "Petr Arsentev", "000001")
-                )
+            Set.of(
+                new Account("123", "Petr Arsentev", "eDer3432f"),
+                new Account("142", "Petr Arsentev", "000001")
+            )
         );
         assertThat(NotifyAccount.sent(accounts), is(expect));
     }
 
     @Test
     public void sentDuplicate() {
-        List<Account> accounts = Arrays.asList(
-                new Account("123", "Petr Arsentev", "eDer3432f"),
-                new Account("123", "Petr Arsentev", "000001")
+        List<Account> accounts = List.of(
+            new Account("123", "Petr Arsentev", "eDer3432f"),
+            new Account("123", "Petr Arsentev", "000001")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
-                        new Account("123", "Petr Arsentev", "000001")
-                )
+            Set.of(
+                new Account("123", "Petr Arsentev", "000001")
+            )
         );
         assertThat(NotifyAccount.sent(accounts), is(expect));
     }
